<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reality Companion</string>
    <string name="server_url">服务器地址</string>
    <string name="pairing_token">配对令牌</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="status_connected">已连接</string>
    <string name="status_disconnected">未连接</string>
    <string name="camera_frame">摄像头画面</string>
    <string name="location">位置</string>
    <string name="telemetry">健康数据</string>
    <string name="activity">活动</string>
</resources>